--- a/web/aula04/style.css
+++ b/web/aula04/style.css
@@ -38,10 +38,10 @@
     
      .div_conteudo{
      width: 600px; 
-     line-height: 400px;
      height: 400px; 
      border: solid black 1px; 
      text-align: center;  
+     
      
 }
 
@@ -53,4 +53,13 @@
          height: 100px; 
          border: solid black 1px;
          text-align: center; 
+}
+
+th{
+    border: solid black 3px;
+
+}
+
+td{
+    border: solid black 2px;
 }
