--- a/web/aula04/style.css
+++ b/web/aula04/style.css
@@ -56,10 +56,7 @@
 }
 
 th{
-    border: solid black 3px;
-
-}
+    border: solid black 3px;}
 
 td{
-    border: solid black 2px;
-}
+    border: solid black 2px;}
