--- a/web/site_bootstrap/style.css
+++ b/web/site_bootstrap/style.css
@@ -7,7 +7,7 @@ padding-bottom: 20px;
 .sessao_colorida{
 background-color: black;
 padding-top: 20px;  
-padding-bottom: 20px;
+
 }
 
 .caixa_servico{
@@ -30,5 +30,18 @@ padding-bottom: 20px;
 .card-img-top{
     min-height: 200px;
     max-height: 200px;
-
 }
+
+.rodape{
+    background-color: gold; 
+    margin: 10px;
+    padding:auto;
+    
+ }
+
+ .rodape2{
+    background-color: gold; 
+    border: solid 1px; 
+    height: 220px;
+     }
+    
