--- a/web/exercicio_bootstrap/style.css
+++ b/web/exercicio_bootstrap/style.css
@@ -8,25 +8,23 @@
         height: 300px;
         text-align: center;
         background-color: skyblue;
-        border: solid black 5px;
-        
-    }   
-
-    .caixa_apresentação{
+        border: solid black 5px;        
+    }       
+        .caixa_personagem{
         background-color:orange;
         border-radius: 6px ;
         text-align: left;
         margin:  10px ;
         font-size:  20px ;  
-    }
+        }
 
-    .caixa_apresentação2{
+        .caixa_personagem2{
         background-color:orange;
         border-radius: 6px ;
         text-align: right;
         margin:  10px ;
         font-size:  20px ;
-    }
+        }    
 
     @media (max-widht: 768px){
 
@@ -37,4 +35,5 @@
         .caixa_apresentação2{
             text-align: center;
         }
+
     }
